Colaboratory を使用して作成しました

--- a/template_Tez_custom.ipynb
+++ b/template_Tez_custom.ipynb
@@ -9,7 +9,7 @@
       "collapsed_sections": [],
       "machine_shape": "hm",
       "mount_file_id": "1InYA0JKMtT5IeAywAfg81oPHMK9JIALH",
-      "authorship_tag": "ABX9TyPNNO8Sfj4uTg99b7Drndor",
+      "authorship_tag": "ABX9TyNGyMvgcS55W+hcj27uou2H",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -566,6 +566,7 @@
         "        \n",
         "    def forward(self, inputs):\n",
         "        outputs = self.model(inputs)\n",
+        "        outputs = outputs.flatten()\n",
         "        return outputs\n",
         "\n",
         "\n",
