Colaboratory を使用して作成しました

--- a/template_basic.ipynb
+++ b/template_basic.ipynb
@@ -9,7 +9,7 @@
       "collapsed_sections": [],
       "machine_shape": "hm",
       "mount_file_id": "1Cf5tQ6GkPr2wDV2di2VHxndVUpSFwTP0",
-      "authorship_tag": "ABX9TyPULzaXY1EhFEhiU8VY4ctT",
+      "authorship_tag": "ABX9TyPV2VuAMI3KnPYrr1naB96r",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -984,7 +984,7 @@
         "                    outputs = outputs.flatten()\n",
         "                    #loss = self.criterion(outputs.flatten(), targets)\n",
         "                    loss = mixup_criterion(self.criterion,\n",
-        "                                                outputs.flatten(), \n",
+        "                                                outputs, \n",
         "                                                targets_a,\n",
         "                                                targets_b, \n",
         "                                                lam)\n",
@@ -996,7 +996,7 @@
         "                outputs = self.model(inputs)\n",
         "                outputs = outputs.flatten()\n",
         "                metrics = self.monitor_metrics(outputs, targets)\n",
-        "                loss = self.criterion(outputs.flatten(), targets)\n",
+        "                loss = self.criterion(outputs, targets)\n",
         "                loss.backward()\n",
         "                self.optimizer.step()\n",
         "            if self.scheduler_after_step:\n",
@@ -1010,7 +1010,7 @@
         "            with torch.no_grad():\n",
         "                outputs = self.model(inputs)\n",
         "                outputs = outputs.flatten()\n",
-        "                loss = self.criterion(outputs.flatten(), targets)\n",
+        "                loss = self.criterion(outputs, targets)\n",
         "                metrics = self.monitor_metrics(outputs, targets)\n",
         "            return outputs, loss, metrics\n",
         "        else:\n",
